# nmurl

./: .gitignore  README.md  TODO  pyproject.toml  requirements.txt  setup.py
nmurl/: main.py  parse.py  parsedns.py  parsenmap.py
scripts/: nmurl
