[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmurl"
version = "1.3.3"
authors = [
  { name="Steve Benson", email="steve@xelphene.net" },
]
description = "Combines nmap output and DNS data to produce HTTP[S] URLs of interest."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
	"ipcidrtree>=1.3.0"
]

[project.scripts]
nmurl="nmurl:main.main"

[project.urls]
"Homepage" = "https://github.com/xelphene/nmurl"
"Bug Tracker" = "https://github.com/xelphene/nmurl/issues"
